re PR target/19421 (ICE with soft-float on m68k)

PR tree-optimization/19421
	* tree-inline.c (copy_body_r): Do not walk subtrees after substituting.

From-SVN: r94254